## goalie 0.2.9 (2019-02-19)

### Minor changes

- Needed to tweak internal code in `assignToBody` to fix backports handling of
  `...elt` for R 3.4.



## goalie 0.2.8 (2019-02-11)

### Minor changes

- Bioconda unit tests revealed that `...elt()` approach used in `assert()` isn't
  backward compatible with R 3.4. The backports package was added as a
  dependency, which provides legacy support for `...elt()` in R 3.4. This is
  called internally inside `.onLoad()` specifically for R releases prior to 3.5.



## goalie 0.2.7 (2019-02-11)

### Minor changes

- `assert()`: `traceback` argument is disabled by default. Note that this can be
  enabled globally using `options(goalie.traceback = TRUE)`, which can be useful
  for code debugging in some situations.
- `isSubset()`: Improved cause message if user attempts to pass in `NULL` for
  either `x` or `y` arguments.
- `hasNonZeroRowsAndCols()`: Fixed typo in internal code that didn't check using
  `hasCols()` properly.
- `isFlag()`: Improved cause message if user passes in `NA`.



## goalie 0.2.6 (2019-01-22)

### New functions

- Migrated `printString()` from [basejump][] package.



## goalie 0.2.5 (2019-01-15)

### Minor changes

- `isADirectory()`, `isAFile()`: Added `nullOK` argument support.



## goalie 0.2.4 (2019-01-06)

### New functions

- New exports: `allAreDirectories()`, `allAreFiles()`, which return scalar.

### Minor changes

- Documentation improvements.



## goalie 0.2.3 (2019-01-04)

### New functions

- Migrated some low-level functions from [basejump][] that are useful for
  assertive checks: `matchArgsToDoCall()`, `standardizeCall()`, and the
  `MethodDefinition` family, which includes `methodFunction()`,
  `methodFormals()`, `hasLocal()`, `extractLocal()`. These will get re-exported
  in [basejump][].

### Minor changes

- Reorganized base engine function files, getting rid of the `base-` prefix.
- Added conditional `NULL` support where applicable, with `nullOK` formal.