@@ -113,6 +113,8 @@
 <a href="#minor-changes" class="anchor"></a>Minor changes</h3>
 <ul>
 <li>Needed to tweak internal code in <code>assignToBody</code> to fix backports handling of <code>...elt</code> for R 3.4.</li>
+<li>
+<code>hasAccess</code>: Needed to add <code>uname</code> call internally for R 3.4 backward compatibility, for checks that rely upon <code>isTRUE</code> to return <code>TRUE</code>, as expected. The handling of this situation has changed in R 3.5.</li>
 </ul>
 </div>
 </div>
