@@ -161,8 +161,8 @@ String containing any of these characters, including in combination:</p><ul>
 
     <h2 class="hasAnchor" id="examples"><a class="anchor" href="#examples"></a>Examples</h2>
     <pre class="examples"><div class='input'><span class='co'>## TRUE ====</span>
-<span class='fu'>hasAccess</span>(<span class='fu'><a href='https://www.rdocumentation.org/packages/base/topics/c'>c</a></span>(<span class='st'>"~"</span>, <span class='st'>"."</span>))</div><div class='output co'>#&gt;     ~     . 
-#&gt; FALSE FALSE </div><div class='input'>
+<span class='fu'>hasAccess</span>(<span class='fu'><a href='https://www.rdocumentation.org/packages/base/topics/c'>c</a></span>(<span class='st'>"~"</span>, <span class='st'>"."</span>))</div><div class='output co'>#&gt;    ~    . 
+#&gt; TRUE TRUE </div><div class='input'>
 <span class='co'>## FALSE ====</span>
 <span class='fu'>hasAccess</span>(<span class='st'>"xxx"</span>)</div><div class='output co'>#&gt;   xxx 
 #&gt; FALSE </div></pre>
